fixed layout gapping

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body{
 }
 
 section{
+    background-color: grey;
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,6 +25,7 @@ section{
     width: 20rem;
     display: flex;
     flex-direction: column;
+    row-gap: 1rem
 }
 
 .heading1{
@@ -43,8 +45,10 @@ input{
 }
 
 .btn{
-    background-color: grey;
+    background-color: rgb(77, 77, 77);
+    color: white;
     cursor: pointer;
+    letter-spacing: 0.1rem
 }
 
 .box p:nth-of-type(2){
